--- a/.github/workflows/python_workflow.yml
+++ b/.github/workflows/python_workflow.yml
@@ -21,7 +21,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Replace with your requirements file name
+        pip install psycopg2
+    #pip install -r requirements.txt  # Replace with your requirements file name
         
     - name: Run Python script
       run: python table.py  # Replace with your Python script name
